--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-webview": "^13.8.1",
+    "react-native-youtube": "^2.0.2",
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
