--- a/package.json
+++ b/package.json
@@ -4,19 +4,25 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.22.3",
+    "@react-native-community/datetimepicker": "^7.6.2",
+    "@react-native-firebase/app": "^19.0.1",
+    "@react-native-firebase/auth": "^19.0.1",
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/stack": "^6.3.23",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "expo": "~50.0.8",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.8.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-elements": "^3.4.3",
     "react-native-webview": "^13.8.1",
     "react-native-youtube": "^2.0.2",
     "react-redux": "^9.1.0"
