--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-firebase/app": "^19.0.1",
     "@react-native-firebase/auth": "^19.0.1",
+    "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/stack": "^6.3.23",
     "@reduxjs/toolkit": "^2.2.1",
@@ -23,6 +24,8 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.16.1",
+    "react-native-reanimated": "^3.10.0",
     "react-native-webview": "^13.8.1",
     "react-native-youtube": "^2.0.2",
     "react-redux": "^9.1.0"
