--- a/package.json
+++ b/package.json
@@ -9,26 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.22.3",
-    "@react-native-community/datetimepicker": "^7.6.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-firebase/app": "^19.0.1",
     "@react-native-firebase/auth": "^19.0.1",
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/stack": "^6.3.23",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
-    "expo": "~50.0.8",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.17",
+    "expo-status-bar": "~1.12.1",
     "firebase": "^10.8.1",
     "react": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "0.74.2",
     "react-native-elements": "^3.4.3",
-    "react-native-webview": "^13.8.1",
+    "react-native-webview": "13.8.6",
     "react-native-youtube": "^2.0.2",
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.24.0",
     "react-native-dotenv": "^3.4.11"
   },
   "private": true
